--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,4 +1,4 @@
-<h2><%= display_event_status(@event) %></h2>
+<h2><%= t(@evnet.status, :scope => "event.status") %></h2>
 
 
 <%= simple_format @event.description %>
