--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -25,6 +25,7 @@
           <ul class="nav navbar-nav">
             <% if current_user %>
               <li class="active"><%= link_to('活動管理', admin_events_path) %></li>
+              <li class="active"><%= link_to('分类管理', admin_categories_path) %></li>
             <% end %>
           </ul>
           <ul class="nav navbar-nav navbar-right">
