--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -26,6 +26,7 @@
             <% if current_user %>
               <li class="active"><%= link_to('活動管理', admin_events_path) %></li>
               <li class="active"><%= link_to('分类管理', admin_categories_path) %></li>
+              <li><%= link_to('用户管理', admin_users_path) %></li>
             <% end %>
           </ul>
           <ul class="nav navbar-nav navbar-right">
