--- a/app/views/registrations/step3.html.erb
+++ b/app/views/registrations/step3.html.erb
@@ -13,11 +13,13 @@
   <div class="form-group">
     <%= f.label :website %>
     <%= f.url_field :website, :class => "form-control" %>
+    <div class="help-block with-errors"></div>
   </div>
 
   <div class="form-group">
     <%= f.label :bio %>
     <%= f.text_area :bio, :class => "form-control" %>
+    <div class="help-block with-errors"></div>
   </div>
 
   <div class="form-group">
@@ -26,3 +28,6 @@
   </div>
 
 <% end %>
+<script>
+  $("form").validator();
+</script>
